--- a/src/_styles/mixins/_variables.scss
+++ b/src/_styles/mixins/_variables.scss
@@ -7,6 +7,8 @@ $midGray: #999;
 $lightGray: #ebebeb;
 $lightestGray: #f4f7f8;
 $lila: #7166a5;
+$brown: #AD833F;
+$yellow: #EDC65A;
 
 $mainColor: $lila;
 $link: $mainColor;
