--- a/src/index.jade
+++ b/src/index.jade
@@ -85,4 +85,4 @@ block content
                                 a.home__pasita__button(href="/producto") Comprar ahora
                     .col-xs-24.col-sm-6
                         .home__pasita__image.home__pasita__image--right
-                                img(src="images/home/marale2.jpg")
+                                img(src="images/home/chef.jpg")
