--- a/src/malbec-reserva/index.jade
+++ b/src/malbec-reserva/index.jade
@@ -13,22 +13,22 @@ block content
             .container
                 .row.nopadding
                     .col-xs-24.col-sm-10
-                        .producto__hero__bottle
-                            img(src="../images/home/malbec-1.png")
+                        .producto__hero__bottle-malbec-reserva
+                            img(src="../images/home/malbec-2.png")
                     .col-xs-24.col-sm-14
-                        .producto__hero__row.producto__hero__row--data
+                        .producto__hero__row.producto__hero__row--data-malbec-reserva
                             .producto__hero__data
-                                h2.producto__hero__title malbec
+                                h2.producto__hero__title malbec reserva
                                 p.producto__hero__text Vino joven, de agradable concentración y estructura, frutado y vivaz. Con notas de frutos rojos.
                                 p.producto__hero__price $ 250
                             .producto__hero__col.producto__hero__col--bottle
-                                img(src="../images/home/malbec-1.png")
+                                img(src="../images/home/malbec-2.png")
                             .producto__hero__col
                                 p.producto__hero__quantity Cantidad
                                 +quantity-selector('1')
                                 a.producto__hero__button(href="/carro-de-compras") Comprar ahora
                         .producto__hero__row.producto__hero__row--description
-                            .producto__hero__wrapper
+                            .producto__hero__wrapper.producto__hero__wrapper--malbec-reserva
                                 p
                                     |composición
                                     br
